Added isNegative tests

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
   <name>interviews-practice</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <!-- For Groovy scripts -->
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>2.4.7</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
